      always well registered with quilt even when it's updated by a new call
      to dpkg-source. Thanks to Goswin von Brederlow for the initial patch.
      Closes: #525858
    - do not update/create debian/patches/.dpkg-source-applied during build,
      it's only meant to document what patches have been applied at extraction
      time. Closes: #525835

 -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 20:32:31 +0200

dpkg (1.14.26) unstable; urgency=low

  [ Raphael Hertzog ]
  * Fix dpkg-source to not die when uncompressor processes are killed by
    SIGPIPE due to tar closing the pipe without exhausting all the data
    available. Closes: #523329

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #514106
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #514106
  * Swedish (Peter Krefting).

 -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 19:07:40 +0200

dpkg (1.14.25) unstable; urgency=low

  [ Guillem Jover ]
  * Fix typo in package description ('privides' -> 'provides').
    Thanks to Pascal De Vuyst <pascal.devuyst@gmail.com>. Closes: #510755
  * Do not lose conffiles while replacing them from another package on the
    same install run. Closes: #513857
    As a side effect this fixes the following symptoms:
    - Do not do unneeded conffile prompts when it wasn't locally changed.
    - Do not ensure (and thus do not output debug information) that the
     .dpkg-new and .dpkg-tmp directories for an existing directory do not
      exist. Closes: #80416

  [ Raphael Hertzog ]
  * dpkg-deb now always produces GNU tarballs inside .deb and ignores
    TAR_OPTIONS. Closes: #513863

  [ Updated dpkg translations ]
  * Basque (Piarres Beobide). Closes: #506092, #509851
  * Simplified Chinese (Deng Xiyue). Closes: #506177
  * Traditional Chinese (Tetralet). Closes: #513312
