@@ -10,6 +10,8 @@ dpkg (1.14.27) UNRELEASED; urgency=low
     - do not update/create debian/patches/.dpkg-source-applied during build,
       it's only meant to document what patches have been applied at extraction
       time. Closes: #525835
+    - call quilt only once to apply all patches instead of once per patch
+      when building 3.0 (quilt) source packages. Closes: #518453
 
  -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 20:32:31 +0200
 
